--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -14,7 +14,6 @@ Metadata:
       - Label:
           default: Frontend
         Parameters:
-          - CertificateArn
           - WebsiteDomainName
           - PortalAllowedIPCIDR
     ParameterLabels:
@@ -24,8 +23,6 @@ Metadata:
         default: Top level domain
       PortalAllowedIPCIDR:
         default: Portal Allowed IP CIDR
-      CertificateArn:
-        default: Certificate ARN
 Parameters:
   DomainName:
     Description:  Domain name not including the top level domain
@@ -39,17 +36,14 @@ Parameters:
     MaxLength: '15'
     Default: local
     AllowedPattern: '[a-zA-Z0-9]+'
-  CertificateArn:
-    Description: ARN for ACM Certificate
-    Type: String
   WebsiteDomainName:
     Description: Domain name for world facing website
     Type: String
   HostedZoneName:
     Description: Hosted zone for the domain
     Type: String
-  ConfigFileBucketName:
-    Description: Config file bucket name for pcluster
+  HostedZoneId:
+    Description: Hosted Zone ID for Route53 Domain
     Type: String
   PortalAllowedIPCIDR:
     Description: IP CIDR for access to the Portal.
@@ -71,6 +65,15 @@ Mappings:
       AMIID: ami-056c679fab9e48d8a
       ALBLogAccount: 797873946194
 Resources:
+
+  OODCertificate:
+    Type: AWS::CertificateManager::Certificate
+    Properties:
+      DomainName: !Ref WebsiteDomainName
+      ValidationMethod: DNS
+      DomainValidationOptions:
+        - HostedZoneId: !Ref HostedZoneId
+          DomainName: !Ref WebsiteDomainName
   VPC:
     Type: AWS::EC2::VPC
     Properties:
@@ -643,14 +646,6 @@ Resources:
               - !Sub ${ClusterConfigBucket.Arn}/*
           - Effect: Allow
             Action:
-              - s3:GetObject
-              - s3:PutObject
-              - s3:ListBucket
-            Resource:
-              - !Sub arn:${AWS::Partition}:s3:::${ConfigFileBucketName}/*
-              - !Sub arn:${AWS::Partition}:s3:::${ConfigFileBucketName}
-          - Effect: Allow
-            Action:
               - elasticfilesystem:ClientMount
               - elasticfilesystem:ClientWrite
               - elasticfilesystem:ClientRootAccess
@@ -725,13 +720,6 @@ Resources:
   OpenOnDemandLaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
     Metadata:
-      AWS::CloudFormation::Authentication:
-        rolebased:
-          type: S3
-          buckets:
-            - !Ref ConfigFileBucketName
-          roleName: !Ref OODInstanceRole
-      # TODO: Add wait condition notification when done
       AWS::CloudFormation::Init:
         configSets:
           config:
@@ -800,6 +788,11 @@ Resources:
               cwd: /etc/ood-install/open-on-demand-on-aws-main/scripts
             configure_mkhomedir:
               command: /etc/ood-install/open-on-demand-on-aws-main/scripts/configure_mkhomedir.sh
+            upload_pcluster_configs:
+              command: |
+                . /etc/ood-install/set_variables.sh
+                ./upload_pcluster_configs.sh
+              cwd: /etc/ood-install/open-on-demand-on-aws-main/scripts
         slurm:
           commands:
             install_munge:
@@ -1000,7 +993,7 @@ Resources:
           TargetGroupArn: !Ref OpenOnDemandTargetGroupHTTPS
       LoadBalancerArn: !Ref ALB
       Certificates:
-        - CertificateArn: !Ref CertificateArn
+        - CertificateArn: !Ref OODCertificate
       Port: 443
       Protocol: "HTTPS"
       SslPolicy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
@@ -1026,7 +1019,7 @@ Resources:
       LoadBalancerArn: !Ref ALB
       Port: 5554
       Certificates:
-        - CertificateArn: !Ref CertificateArn
+        - CertificateArn: !Ref OODCertificate
       Protocol: "HTTPS"
       SslPolicy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
 
@@ -1446,8 +1439,6 @@ Resources:
             Resource:
               - !GetAtt ClusterConfigBucket.Arn
               - !Sub ${ClusterConfigBucket.Arn}/*
-              - !Sub arn:${AWS::Partition}:s3:::${ConfigFileBucketName}/*
-              - !Sub arn:${AWS::Partition}:s3:::${ConfigFileBucketName}
           - Effect: Allow
             Action:
               - elasticfilesystem:ClientMount
@@ -1457,8 +1448,8 @@ Resources:
               - !GetAtt SharedFileSystem.Arn
           - Effect: Allow
             Action:
-              - cloudformation:Describe* # TODO: Scope down
-              - cloudformation:List* # TODO: Scope down
+              - cloudformation:Describe*
+              - cloudformation:List*
             Resource:
               - !Ref AWS::StackId
 
@@ -1489,8 +1480,6 @@ Resources:
             Resource:
               - !GetAtt ClusterConfigBucket.Arn
               - !Sub ${ClusterConfigBucket.Arn}/*
-              - !Sub arn:${AWS::Partition}:s3:::${ConfigFileBucketName}/*
-              - !Sub arn:${AWS::Partition}:s3:::${ConfigFileBucketName}
 Outputs:
   URL:
     Description: URL
