Comment out regions where simpleAD is not supported

--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -67,18 +67,68 @@ Parameters:
     Type: String
 Mappings:
   RegionMap:
+  # Source for AMI ID: https://wiki.centos.org/Cloud/AWS
+  # Source for ALB Log Account: https://docs.aws.amazon.com/elasticloadbalancing/latest/application/enable-access-logging.html
     us-east-1:
       AMIID: ami-0ee70e88eed976a1b
       ALBLogAccount: 127311923021
-    us-east-2:
-      AMIID: ami-045b0a05944af45c1
-      ALBLogAccount: 033677994240
-    us-west-1:
-      AMIID: ami-006f59adcb98c236f
-      ALBLogAccount: 027434742980
+    # us-east-2:
+    #   AMIID: ami-045b0a05944af45c1
+    #   ALBLogAccount: 033677994240
+    # us-west-1:
+    #   AMIID: ami-006f59adcb98c236f
+    #   ALBLogAccount: 027434742980
     us-west-2:
       AMIID: ami-056c679fab9e48d8a
       ALBLogAccount: 797873946194
+    # af-south-1:
+    #   AMIID: ami-01d7c2b5c4fc0218a
+    #   ALBLogAccount: 098369216593
+    # ap-east-1:
+    #   AMIID: ami-0b37ca06a565ba470
+    #   ALBLogAccount: 754344448648
+    # ap-south-1:
+    #   AMIID: ami-0967a8b99f328dfee
+    #   ALBLogAccount: 718504428378
+    ap-northeast-1:
+      AMIID: ami-06ee905d0566e92e7
+      ALBLogAccount: 582318560864
+    # ap-northeast-2:
+    #   AMIID: ami-054d85b8af5b91956
+    #   ALBLogAccount: 600734575887
+    ap-southeast-1:
+      AMIID: ami-092422d03e2e1e43f
+      ALBLogAccount: 114774131450
+    ap-southeast-2:
+      AMIID: ami-0270da940c59823a1
+      ALBLogAccount: 783225319266
+    # ca-central-1:
+    #   AMIID: ami-0c43193f9aa2a22db
+    #   ALBLogAccount: 985666609251
+    # eu-central-1:
+    #   AMIID: ami-071096749fda40d3f
+    #   ALBLogAccount: 054676820928
+    eu-west-1:
+      AMIID: ami-0e0669c0b39d3a79f
+      ALBLogAccount: 156460612806
+    # eu-west-2:
+    #   AMIID: ami-0418c980c296f36ce
+    #   ALBLogAccount: 652711504416
+    # eu-west-3:
+    #   AMIID: ami-068ebc10e14d9a504
+    #   ALBLogAccount: 009996457667
+    # eu-south-1:
+    #   AMIID: ami-015495d931a04c6a3
+    #   ALBLogAccount: 635631232127
+    # eu-north-1:
+    #   AMIID: ami-0ab62823bc41fa10a
+    #   ALBLogAccount: 897822967062
+    # me-south-1:
+    #   AMIID: ami-08922e5d0a577ac38
+    #   ALBLogAccount: 076674570225
+    # sa-east-1:
+    #   AMIID: ami-0be416330b68d16f4
+    #   ALBLogAccount: 507241528517
 Resources:
 
   OODCertificate:
