--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -1055,6 +1055,8 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
+      VersioningConfiguration:
+        Status: Enabled
 
   ClusterConfigBucketPolicy:
     Type: AWS::S3::BucketPolicy
@@ -1086,6 +1088,8 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
+      VersioningConfiguration:
+        Status: Enabled
 
   LoadBalancerLogBucketPolicy:
     Type: AWS::S3::BucketPolicy
@@ -1277,6 +1281,8 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
+      VersioningConfiguration:
+        Status: Enabled
 
   DataTrailBucketPolicy:
     Type: AWS::S3::BucketPolicy
