--- a/cloudformation/openondemand.yml
+++ b/cloudformation/openondemand.yml
@@ -59,6 +59,7 @@ Parameters:
   PortalAllowedIPCIDR:
     Description: IP CIDR for access to the Portal
     Type: String
+    Default: 0.0.0.0/0
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
   Branch:
